WIP: fix: Complete rewrite
We were hitting limits of our current design and this sees us do a
complrte rewrite which simplifies a lot of the design by using proper
graph data structures and codifying how to walk it.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ itertools = "0.10"
 ignore = "0.4"
 bstr = "0.2"
 maplit = "1"
+petgraph = "0.6.0"
+downcast-rs = "1.2.0"
 
 [dev-dependencies]
 git-fixture = { version = "0.2" }
